[gd_scene load_steps=21 format=3 uid="uid://kx8xfo1ru1e7"]

[ext_resource type="Material" uid="uid://efl58etuu7fx" path="res://Assets/blue_grid.tres" id="1_v5xtn"]
[ext_resource type="Script" uid="uid://cl3icho2ah1iy" path="res://scenes/interaction/lever_smooth_tutorial.gd" id="1_ypxb0"]
[ext_resource type="Script" uid="uid://dmjks2qw0vi83" path="res://addons/godot-xr-tools/interactables/interactable_hinge.gd" id="2_ypxb0"]
[ext_resource type="Material" uid="uid://bm7ddbtfd6q8y" path="res://Assets/brown_grid_triplanar.tres" id="3_lgm1s"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="4_g4da3"]
[ext_resource type="Animation" uid="uid://db62hs5s4n2b3" path="res://addons/godot-xr-tools/hands/animations/left/Grip 4.res" id="5_7jonr"]
[ext_resource type="Script" uid="uid://ghte05yt0pl4" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="6_sivx4"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="7_d130d"]
[ext_resource type="Animation" uid="uid://d1xnpyc08njjx" path="res://addons/godot-xr-tools/hands/animations/right/Grip 4.res" id="8_xgbt0"]
[ext_resource type="Script" uid="uid://c2yq5phg85362" path="res://addons/godot-xr-tools/interactables/interactable_handle.gd" id="9_qhuqc"]
[ext_resource type="PackedScene" uid="uid://ca3daqmpo0tua" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_redirect.tscn" id="10_j1smv"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(0.2, 0.6, 0.1)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(0.2, 0.6, 0.1)

[sub_resource type="BoxShape3D" id="3"]
size = Vector3(0.04, 0.04, 0.2)

[sub_resource type="SphereShape3D" id="4"]
radius = 0.06

[sub_resource type="BoxMesh" id="5"]
size = Vector3(0.04, 0.04, 0.2)

[sub_resource type="SphereMesh" id="6"]
radius = 0.06
height = 0.12
radial_segments = 16
rings = 8

[sub_resource type="Resource" id="Resource_v6sel"]
script = ExtResource("6_sivx4")
open_pose = ExtResource("5_7jonr")
closed_pose = ExtResource("5_7jonr")

[sub_resource type="Resource" id="Resource_t7yav"]
script = ExtResource("6_sivx4")
open_pose = ExtResource("8_xgbt0")
closed_pose = ExtResource("8_xgbt0")

[sub_resource type="SphereShape3D" id="7"]
margin = 0.12
radius = 0.06

[node name="LeverSmooth" type="Node3D"]
script = ExtResource("1_ypxb0")

[node name="Frame" type="StaticBody3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Frame"]
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Frame"]
mesh = SubResource("2")
surface_material_override/0 = ExtResource("1_v5xtn")

[node name="LeverOrigin" type="Node3D" parent="."]
transform = Transform3D(1, -1.06581e-14, 0, 1.06581e-14, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="InteractableLever" type="Node3D" parent="LeverOrigin"]
script = ExtResource("2_ypxb0")

[node name="HingeBody" type="StaticBody3D" parent="LeverOrigin/InteractableLever"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)

[node name="BarCollision" type="CollisionShape3D" parent="LeverOrigin/InteractableLever/HingeBody"]
shape = SubResource("3")

[node name="HandleCollision" type="CollisionShape3D" parent="LeverOrigin/InteractableLever/HingeBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
shape = SubResource("4")

[node name="BarMesh" type="MeshInstance3D" parent="LeverOrigin/InteractableLever/HingeBody"]
mesh = SubResource("5")
surface_material_override/0 = ExtResource("3_lgm1s")

[node name="HandleMesh" type="MeshInstance3D" parent="LeverOrigin/InteractableLever/HingeBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
mesh = SubResource("6")
surface_material_override/0 = ExtResource("3_lgm1s")

[node name="GrabPointHandLeft" parent="LeverOrigin/InteractableLever/HingeBody/HandleMesh" instance=ExtResource("4_g4da3")]
transform = Transform3D(-4.37114e-08, 1, -7.53641e-15, -0.707107, -3.09086e-08, -0.707107, -0.707107, -3.09086e-08, 0.707107, 0.05, 0.0759278, -0.0419973)
hand_pose = SubResource("Resource_v6sel")

[node name="GrabPointHandRight" parent="LeverOrigin/InteractableLever/HingeBody/HandleMesh" instance=ExtResource("7_d130d")]
transform = Transform3D(-4.37114e-08, -1, -1.02355e-14, 0.642788, -2.80971e-08, -0.766044, 0.766044, -3.34849e-08, 0.642788, -0.05, 0.0759278, -0.0419973)
hand_pose = SubResource("Resource_t7yav")

[node name="HandleOrigin" type="Node3D" parent="LeverOrigin/InteractableLever"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2)

[node name="InteractableHandle" type="RigidBody3D" parent="LeverOrigin/InteractableLever/HandleOrigin"]
collision_layer = 262144
collision_mask = 0
freeze = true
script = ExtResource("9_qhuqc")
picked_up_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeverOrigin/InteractableLever/HandleOrigin/InteractableHandle"]
shape = SubResource("7")

[node name="GrabPointRedirectLeft" parent="LeverOrigin/InteractableLever/HandleOrigin/InteractableHandle" node_paths=PackedStringArray("target") instance=ExtResource("10_j1smv")]
target = NodePath("../../../HingeBody/HandleMesh/GrabPointHandLeft")

[node name="GrabPointRedirectRight" parent="LeverOrigin/InteractableLever/HandleOrigin/InteractableHandle" node_paths=PackedStringArray("target") instance=ExtResource("10_j1smv")]
target = NodePath("../../../HingeBody/HandleMesh/GrabPointHandRight")

[connection signal="grabbed" from="LeverOrigin/InteractableLever" to="." method="_on_interactable_lever_grabbed"]
[connection signal="hinge_moved" from="LeverOrigin/InteractableLever" to="." method="_on_interactable_lever_hinge_moved"]
[connection signal="released" from="LeverOrigin/InteractableLever" to="." method="_on_interactable_lever_released"]
